# VeedurIA-Ciudadana

./: .gitignore  README.md  Veeduría-main-doc.md  ejemplo.html
.gitcore/: ARCHITECTURE.md
.github/issues/: FEAT_frontend-integration.md  FEAT_master_data_management.md  FEAT_open-source-socrata-client.md  FEAT_reporting-engine.md  TEST_e2e-pipeline.md
.github/workflows/: build-tools.yml  data-pipeline.yml  deploy-pages.yml
backend/: Cargo.toml
backend/crates/domain/: Cargo.toml  README.md
backend/crates/domain/src/: lib.rs
backend/crates/mdm-core/: Cargo.toml
backend/crates/mdm-core/src/: cleaner.rs  domain.rs  lib.rs  resolver.rs
backend/crates/socrata-sdk/: CONTRIBUTING.md  Cargo.toml  README.md
backend/crates/socrata-sdk/src/: lib.rs
backend/src/: main.rs
backend/src/obs/: analyze.rs  ingest.rs  mod.rs  nlp.rs
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts
frontend/public/: daily_report.json  stats.json
frontend/src/components/: ContractCard.svelte  DashboardCharts.svelte  DashboardStats.svelte  HistoryList.svelte  LiveCounter.svelte  RedFlagList.svelte  ReportForm.svelte  ReportPreview.svelte
frontend/src/layouts/: Layout.astro
frontend/src/lib/: reportState.svelte.ts  reportStore.ts
frontend/src/pages/: dashboard.astro  denunciar.astro  educacion.astro  index.astro
frontend/src/styles/: global.css
frontend/tests/: flow.spec.ts
