[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Data Analysis
polars = { version = "0.45", features = ["lazy", "parquet", "json", "strings", "rolling_window", "temporal"] }

# Math / Stats
statrs = "0.17"

# AI / ML (Hugging Face Candle)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.19"
hf-hub = "0.3"
