[package]
name = "mdm-core"
version = "0.1.0"
edition = "2021"
description = "Core Master Data Management logic for Veeduría IA"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
polars = { version = "0.45", features = ["lazy", "parquet", "json"] }
strsim = "0.11"
